--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- ...other attributes... -->
-        <item name="android:navigationBarColor">#d3c1b1</item>
+        <item name="android:navigationBarColor">@color/background</item>
     </style>
 </resources>
