--- a/app/src/main/res/layout/activity_option_screen.xml
+++ b/app/src/main/res/layout/activity_option_screen.xml
@@ -64,6 +64,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="20dp"
-        android:text="@string/submit" />
+        android:text="@string/submit"
+        android:textSize="25sp"
+        android:textStyle="bold"/>
 
 </LinearLayout>
