--- a/app/src/main/res/drawable/edittext_border.xml
+++ b/app/src/main/res/drawable/edittext_border.xml
@@ -2,6 +2,6 @@
     <solid android:color="#FFFFFF" />
     <stroke
         android:width="1dp"
-        android:color="#CCCCCC" /> <!-- Set the border color to a light color, like #CCCCCC -->
+        android:color="#000000" /> <!-- Set the border color to a light color, like #CCCCCC -->
     <corners android:radius="8dp" />
 </shape>
