--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.SGPA" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:navigationBarColor">@color/background</item>
+        <item name="colorPrimaryVariant">@color/background</item>
+        <item name="colorPrimary">@color/background</item>
+        <item name="android:windowBackground">@color/white</item>
     </style>
-
-    <style name="Theme.SGPA" parent="Base.Theme.SGPA" />
 </resources>
