--- a/app/src/main/res/layout/activity_option_screen.xml
+++ b/app/src/main/res/layout/activity_option_screen.xml
@@ -87,14 +87,12 @@
 
     <Button
         android:id="@+id/submitButton"
+        style="@style/SubmitButton"
         android:layout_width="179dp"
         android:layout_height="65dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="20dp"
-        android:text="@string/submit"
-        android:textColor="@color/black"
-        android:theme="@style/SubmitButton"/>
-        <!--android:theme="@style/SubmitButton"--> />
+        android:text= "@string/submit"/>
 
 </LinearLayout>
