--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,17 @@
 <resources>
     <style name="SubmitButton">
-        <item name="buttonTint">@color/background</item>
+        <item name="android:background">?attr/buttonBackground</item>
         <item name="textAllCaps">true</item>
-        <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="editText">
+        <item name="android:textColorHint">@color/theme</item>
+        <item name="android:textColor">@color/theme</item>
+        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/montserrat</item>
+        <item name="android:inputType">number</item>
     </style>
 </resources>
